# PoCat-OBC-SW

./: .gitignore  .mxproject  .project  pocat-moon.ioc
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
CA7/: .project  manifest.prop
CA7/DeviceTree/pocat-moon/kernel/: Makefile  stm32mp157f-pocat-moon-mx.dts
CA7/DeviceTree/pocat-moon/optee-os/: conf.mk  stm32mp157f-pocat-moon-mx.dts
CA7/DeviceTree/pocat-moon/tf-a/: stm32mp15-mx.dtsi  stm32mp157f-pocat-moon-mx-fw-config.dts  stm32mp157f-pocat-moon-mx.dts
CA7/DeviceTree/pocat-moon/u-boot/: Makefile  stm32mp157f-pocat-moon-mx-u-boot.dtsi  stm32mp157f-pocat-moon-mx.dts  stm32mp157f-pocat-moon-mx.dts.bak
CM4/: .cproject  .project  CMakeLists.txt  build.sh  pocat-moon_CM4 Debug.cfg  pocat-moon_CM4 Debug.launch
CM4/.externalToolBuilders/: Run CMake Script.launch
CM4/App/: common.c  common.h
CM4/App/Logic/Manager/Inc/: obc_event_mapping.h  obc_manager.h
CM4/App/Logic/Manager/Inc/Handlers/: obc_common_handlers.h  obc_comms_handlers.h  obc_handlers.h  obc_health_handlers.h
CM4/App/Logic/Manager/Src/: obc_event_mapping.c  obc_manager.c
CM4/App/Logic/Manager/Src/Handlers/: obc_common_handlers.c  obc_comms_handlers.c
CM4/App/Logic/Subsystems/Inc/: comms_task.h
CM4/App/Logic/Subsystems/Src/: adcs_task.c  comms_task.c  eps_task.c  health_task.c  obdh_task.c  payload_task.c
CM4/App/Manager/Inc/: obc_event_routing.h  obc_manager.h
CM4/App/Manager/Inc/Handlers/: obc_adcs_handlers.h
CM4/App/Manager/Src/: obc_event_routing.c  obc_manager.c
CM4/App/Manager/Src/Handlers/: obc_adcs_handlers.c
CM4/App/Services/EVT/Inc/: evt_service.h
CM4/App/Services/EVT/Src/: evt_service.c
CM4/App/Subsystems/Inc/: comms_task.h
CM4/App/Subsystems/Src/: adcs_task.c  eps_task.c  payload_task.c
CM4/App/Utils/Inc/: logging.h  utils.h
CM4/App/Utils/Src/: logging.c
CM4/Application/Inc/: common.h
CM4/Application/Inc/Services/Events/: evt_core.h  evt_defs.h  evt_tables.h
CM4/Application/Inc/Services/Events/Handlers/: evt_comms_handlers.h  evt_eps_handlers.h  evt_handlers.h  evt_obdh_handlers.h  evt_payload_handlers.h
CM4/Application/Inc/Services/Manager/: obc_manager.h
CM4/Application/Inc/Subsystems/: health.h  payload.h
CM4/Application/Inc/Utils/: log.h  mylog.h
CM4/Application/Src/: common.c
CM4/Application/Src/Services/Events/: evt_core.c  evt_tables.c
CM4/Application/Src/Services/Events/Handlers/: evt_comms_handlers.c  evt_payload_handlers.c
CM4/Application/Src/Services/Manager/: obc_manager.c
CM4/Application/Src/Subsystems/: adcs.c  comms.c  eps.c  health.c  obdh.c  payload.c
CM4/Application/Src/Utils/: freertos.c  log.c  mylog.c
CM4/Cmake/: CMakeLists.txt  toolchain.cmake
CM4/Core/Inc/: main.h  stm32mp1xx_hal_conf.h  stm32mp1xx_it.h
CM4/Core/Src/: main.c  stm32mp1xx_hal_msp.c  stm32mp1xx_hal_timebase_tim.c  stm32mp1xx_it.c
CM4/Debug/: makefile  objects.list  sources.mk
CM4/Debug/Common/System/: subdir.mk
CM4/Debug/Core/Src/: subdir.mk
CM4/Debug/Core/Startup/: subdir.mk
CM4/Debug/Drivers/STM32MP1xx_HAL_Driver/: subdir.mk
CM4/Debug/Drivers/STM32MP1xx_HAL_Driver/Src/: subdir.mk
CM4/Debug/OPENAMP/: mbox_ipcc.d  openamp_log.d  rsc_table.d  subdir.mk
CM4/OPENAMP/: mbox_ipcc.c  mbox_ipcc.h  openamp.c  openamp.h  openamp_conf.h  openamp_log.c  openamp_log.h  rsc_table.c  rsc_table.h
